src/components/MemoList/list.css
.itemWrapper {
  padding: 0 12px;
  max-width: 400px;
  margin: auto;
}
.listWrapper {
  display: flex;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #412321;
  padding: 0 5px;
  height: 26px;
  margin-bottom: 5px;
}
.listWrapper:last-child {
  margin-bottom: 0;
}

.listWrapper > span:first-child {
  width: 24px;
  text-align: right;
}
.listWrapper > span:first-child::after {
  content: ".";
}

.itemHeader {
  display: flex;
  height: 28px;
  justify-content: space-around;
  margin-bottom: 24px;
}
.itemHeader > input {
  flex: 1;
  padding: 0 5px;
  max-width: 300px;
}
.itemHeader > input:focus {
  outline: none;
}

.addItemBtn {
  margin-left: 5px;
  padding: 5px 10px;
  color: #fff;
  border: 0 none;
  background: #f12;
  cursor: pointer;
}
.addItemBtn:hover {
  background: #f33;
}
.addItemBtn:focus {
  outline: none;
}

